--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,9 +3,9 @@ version: "3.7"
 services:
   prisma-cms:
     restart: always
-    volumes:
-      - ./prisma-cms/boilerplate/shared:/www/prisma-cms/shared
-      - ./prisma-cms/boilerplate/uploads:/www/prisma-cms/uploads
+    # volumes:
+    #   - ./prisma-cms/boilerplate/shared:/www/prisma-cms/shared
+    #   - ./prisma-cms/boilerplate/uploads:/www/prisma-cms/uploads
 
     build:
       dockerfile: Dockerfile.prod
