Fix .dockerignore. Move commands

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,12 +9,14 @@ services:
   front:
     volumes:
       - ./prisma-cms/boilerplate/src:/www/boilerplate/src
+    command: yarn start
 
   api:
     volumes:
       - ./prisma-cms/boilerplate/src:/www/boilerplate/src
     environment: 
       - SendmailTest=true
+    command: bash -c "echo $endpoint && yarn deploy && yarn start-server-dev"
 
   proxy:
     ports:
