--- a/.env.sample
+++ b/.env.sample
@@ -2,9 +2,9 @@
 MYSQL_DB=prisma
 MYSQL_PASSWORD=prisma
 
+dev_endpoint=http://prisma:4466/prisma-cms/dev
+prod_endpoint=http://prisma:4466/prisma-cms/prod
 API_ENDPOINT=http://api:4000
-
-endpoint=http://prisma:4466/prisma-cms/dev
 APP_SECRET=YOUR_STRONG_SECRET
 
 Sendmail=true 
