--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,9 @@
 MYSQL_DB=prisma
 MYSQL_PASSWORD=prisma
 
+PRISMA_MIGRATIONS=true
+PRISMA_RAW_ACCESS=true
+
 dev_endpoint=http://prisma:4466/prisma-cms/dev
 prod_endpoint=http://prisma:4466/prisma-cms/prod
 API_ENDPOINT=http://api:4000
