--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,9 @@ MYSQL_PASSWORD=prisma
 PRISMA_MIGRATIONS=true
 PRISMA_RAW_ACCESS=true
 
+# site dir from ./prisma-cms/
+SITE=boilerplate
+
 dev_endpoint=http://prisma:4466/prisma-cms/dev
 prod_endpoint=http://prisma:4466/prisma-cms/prod
 API_ENDPOINT=http://api:4000
