Fix deploy schema

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,6 +18,7 @@ services:
     build:
       args: 
         - ENV_MODE=production
+        - endpoint=${prod_endpoint}
     command: yarn start-ssr
 
   api:
