Added PMA_UPLOAD_LIMIT environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     environment:
       PMA_HOST: ${MYSQL_HOST:-mysql}
       PMA_PORT: ${MYSQL_PORT:-3306}
+      UPLOAD_LIMIT: ${PMA_UPLOAD_LIMIT:-100M}
     # depends_on:
     #   - mysql
 
