--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,7 @@ services:
     environment: 
       - API_ENDPOINT=${API_ENDPOINT:-http://api:4000}
       - endpoint=${dev_endpoint}
+      - GethServer=${ETHEREUM_GATEWAY:-https://cloudflare-eth.com}
     # entrypoint: /usr/bin/entrypoint-api.sh
 
   # web-server
