--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,8 @@ services:
         - endpoint=${dev_endpoint}
     volumes:
       # - schema:/www/${SITE:-boilerplate}/src/schema
-      - shared:/www/${SITE:-boilerplate}/shared
+      # - shared:/www/${SITE:-boilerplate}/shared
+      - ./prisma-cms/${SITE:-boilerplate}/shared:/www/${SITE:-boilerplate}/shared
       - ./prisma-cms/${SITE:-boilerplate}/uploads:/www/${SITE:-boilerplate}/uploads
     # environment: 
     env_file: 
@@ -99,7 +100,7 @@ services:
 volumes:
   mysql:
   # schema:
-  shared:
+  # shared:
 
 networks:
   default:
