--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,3 +39,9 @@ services:
     ports:
       - 80:80
       - 443:443
+
+  rtcmultyconnection:
+    restart: always
+
+  coturn:
+    restart: always
