--- a/caddy/Caddyfile.sample
+++ b/caddy/Caddyfile.sample
@@ -50,3 +50,14 @@
         websocket
     }
 }
+
+
+0.0.0.0/socket.io/ 0.0.0.0:80/socket.io/ {
+    tls off
+    gzip
+
+    proxy / rtcmultyconnection:9001/socket.io/ {
+        transparent
+        websocket
+    }
+}
